# Base Model

# Imports
from abc import ABC, abstractmethod
import pandas as pd
import numpy as np
from sklearn import utils


class BaseModel(ABC):
    def __init__(self) -> None:
        ...

    # Training the model to use ML models for multi-class and multi-label classification.
    @abstractmethod
    def train(self) -> None:
        ...

    @abstractmethod
    def predict(self) -> int:
        ...

    @abstractmethod
    def data_transform(self) -> None:
        return

    # def build(self, values) -> BaseModel:
    def build(self, values={}):
        values = values if isinstance(values, dict) else utils.string2any(values)
        self.__dict__.update(self.defaults)
        self.__dict__.update(values)
        return self
